// protoc --go_out=.  --go-grpc_out=. *.proto
syntax = "proto3";

package Configmgr;
option go_package = "./;api";

service Greeter {
  rpc GetConfig(GetConfigReq) returns(GetConfigRes){}
  rpc SetConfig(SetConfigReq) returns(SetConfigRes){}
  rpc DelConfig(DelConfigReq) returns(DelConfigRes){}
  rpc Watch(WatchReq) returns(stream WatchRes){}
}

message GetConfigReq {
  string key = 1;
}
message GetConfigRes{
  string val = 1; // json
}

message SetConfigReq {
  string key = 1;
  string val = 2; // json
}
message SetConfigRes{
}

message DelConfigReq {
  string key = 1;
}
message DelConfigRes{
}

enum WatchType {
  PUT=0;
  DELETE=1;
}
message WatchReq {
  string key = 1;
}
message WatchRes{
  WatchType type = 1;
  string key = 2;
  bytes val = 3;
}
